added sample code

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>angular-phonebook-ui</name>
+	<name>phonebook-ui-angular</name>
 	<comment></comment>
 	<projects>
 	</projects>
